<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FBFBFB"
        tools:context=".ui.superheroeslist.Superheroes">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/ab_superheroes_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FBFBFB"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/mtb_superheroes_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="#FBFBFB"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_profile_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="8dp"
                    android:src="@drawable/ic_profile_my"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlSymmetry" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_greeting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/greeting"
                    app:layout_constraintStart_toEndOf="@id/iv_profile_photo"
                    app:layout_constraintTop_toTopOf="@id/iv_profile_photo" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nikita_ulyanov"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/tv_greeting"
                    app:layout_constraintTop_toBottomOf="@id/tv_greeting" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>


        <LinearLayout
            android:id="@+id/ll_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ab_superheroes_list">

            <EditText
                android:id="@+id/et_search_by_name"
                style="@style/InputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/background_superhero_search"
                android:hint="@string/et_hint_enter_superhero_name"
                android:inputType="text"
                android:text=""
                android:imeOptions="actionDone"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:autofillHints="" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_search"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_search_24"/>
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_lets_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/let_s_start_searching"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_search"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_superheroes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_search"
            tools:itemCount="12"
            tools:listitem="@layout/item_superhero" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>